--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "*",
         "sonata-project/admin-bundle": "*",
-        "sonata-project/doctrine-orm-admin-bundle": "*"
+        "sonata-project/doctrine-orm-admin-bundle": "*",
+        "fpn/tag-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
