--- a/src/Listreat/MainBundle/Resources/config/services.yml
+++ b/src/Listreat/MainBundle/Resources/config/services.yml
@@ -44,3 +44,8 @@ services:
     arguments: [ null, Listreat\MainBundle\Entity\Follow, SonataAdminBundle:CRUD ]
     calls:
       - [ setTranslationDomain, [ ListreatMainBundle ] ]
+
+  fpn_tag:
+    model:
+        tag_class:     Listreat\MainBundle\Entity\Tag
+        tagging_class: Listreat\MainBundle\Entity\Tagging
