tag-it + tagBundle

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -56,3 +56,8 @@ security:
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
+    
+fpn_tag:
+    model:
+        tag_class:     LisTreat\MainBundle\Entity\Tag
+        tagging_class: LisTreat\MainBundle\Entity\Tagging
